# kale

./: .copier-answers.yml  .editorconfig  .flake8  .gitignore  .prettierignore  AUTHORS  Example.ipynb  Example_kfp_pipeline.py  Example_kfp_pipeline.yaml  FAQ.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  Untitled.ipynb  Untitled_kfp_pipeline.py  Untitled_kfp_pipeline.yaml  ast.ipynb  config.ini  install.json  iris-example_kfp_pipeline.py  iris_example_kfp_pipeline.py  iris_example_kfp_pipeline.yaml  package.json  pyproject.toml  requirements.txt  setup.py
labextension/: .copier-answers.yml  .gitignore  .prettierignore  .prettierrc.js  .stylelintrc  AUTHORS  LICENSE  MANIFEST.in  README.md  RELEASE.md  dev-notes.md  install.json  package.json  pyproject.toml  setup.py  tsconfig.json
labextension/.github/workflows/: build.yml  check-release.yml  ci-workflow.yaml
labextension/kubeflow-kale-labextension/: __init__.py
labextension/kubeflow-kale-labextension/labextension/: build_log.json  package.json
labextension/kubeflow-kale-labextension/labextension/static/: _6824-_09a7-_2301-_0a04-_6a9a0.8ba17d2a11c5edeb0635.js  _6824-_09a7-_2301-_0a04-_6a9a0.8ba17d2a11c5edeb0635.js.map  _6824-_09a7-_2301-_0a04-_6a9a1.e055cd6cb2b3d1192198.js  _6824-_09a7-_2301-_0a04-_6a9a1.e055cd6cb2b3d1192198.js.map  lib_index_js.f2b3e17bc9e6018b6d0b.js  lib_index_js.f2b3e17bc9e6018b6d0b.js.map  node_modules_emotion_use-insertion-effect-with-fallbacks_dist_emotion-use-insertion-effect-wi-3c9bb40.0790560f63aea777b256.js  node_modules_emotion_use-insertion-effect-with-fallbacks_dist_emotion-use-insertion-effect-wi-3c9bb40.0790560f63aea777b256.js.map  node_modules_emotion_use-insertion-effect-with-fallbacks_dist_emotion-use-insertion-effect-wi-3c9bb41.ee79c27c75aabd39c764.js  node_modules_emotion_use-insertion-effect-with-fallbacks_dist_emotion-use-insertion-effect-wi-3c9bb41.ee79c27c75aabd39c764.js.map  node_modules_use-debounce_dist_index_module_js-_a1c60.528c073ee69cf3a0fda1.js  node_modules_use-debounce_dist_index_module_js-_a1c60.528c073ee69cf3a0fda1.js.map  node_modules_use-debounce_dist_index_module_js-_a1c61.68b8b5fe9d40c3afd9e4.js  node_modules_use-debounce_dist_index_module_js-_a1c61.68b8b5fe9d40c3afd9e4.js.map  remoteEntry.f8f65c2a72b84c2e54c5.js  remoteEntry.f8f65c2a72b84c2e54c5.js.map  vendors-node_modules_babel_runtime_helpers_esm_extends_js-node_modules_emotion_serialize_dist-051195.de52355949b9a958717e.js  vendors-node_modules_babel_runtime_helpers_esm_extends_js-node_modules_emotion_serialize_dist-051195.de52355949b9a958717e.js.map  vendors-node_modules_emotion_cache_dist_emotion-cache_browser_development_esm_js.ed23807312c9489aae2e.js  vendors-node_modules_emotion_cache_dist_emotion-cache_browser_development_esm_js.ed23807312c9489aae2e.js.map  vendors-node_modules_emotion_react_dist_emotion-react_browser_development_esm_js.41b0072bf63fc0b1df6c.js  vendors-node_modules_emotion_react_dist_emotion-react_browser_development_esm_js.41b0072bf63fc0b1df6c.js.map  vendors-node_modules_emotion_styled_dist_emotion-styled_browser_development_esm_js.82293348bf6da6d700a4.js  vendors-node_modules_emotion_styled_dist_emotion-styled_browser_development_esm_js.82293348bf6da6d700a4.js.map  vendors-node_modules_jupyterlab_builder_node_modules_css-loader_dist_runtime_api_js-node_modu-348041.c5639a47fa5a5de5e665.js  vendors-node_modules_jupyterlab_builder_node_modules_css-loader_dist_runtime_api_js-node_modu-348041.c5639a47fa5a5de5e665.js.map  vendors-node_modules_mui_material_esm_ButtonGroup_ButtonGroup_js-node_modules_mui_material_es-85acd9.89e455da854126f4395f.js  vendors-node_modules_mui_material_esm_ButtonGroup_ButtonGroup_js-node_modules_mui_material_es-85acd9.89e455da854126f4395f.js.map  vendors-node_modules_mui_material_esm_index_js.6743648ea7acd34a789e.js  vendors-node_modules_mui_material_esm_index_js.6743648ea7acd34a789e.js.map  vendors-node_modules_prop-types_index_js.191eca01369192bb8952.js  vendors-node_modules_prop-types_index_js.191eca01369192bb8952.js.map  vendors-node_modules_react-sanitized-html_lib_index_js.4b2b51a4148974316f57.js  vendors-node_modules_react-sanitized-html_lib_index_js.4b2b51a4148974316f57.js.map
labextension/samples/: candies_sharing.ipynb
labextension/src/: Theme.ts  explorer.tsx  index.ts  panel.tsx  widget.tsx
labextension/src/components/: AdvancedSettings.tsx  AnnotationInput.tsx  CellTags.tsx  Components.tsx  DeployButton.tsx  ExperimentInput.tsx  Input.tsx  Inputs.tsx  KatibDialog.tsx  LeftPanelWidget.tsx  LightTooltip.tsx  RokInput.tsx  Select.tsx  SelectMulti.tsx  VolumeAccessModeSelect.tsx  VolumesPanel.tsx
labextension/src/components/cell-metadata/: CellMetadataEditor.tsx  CellMetadataEditorDialog.tsx  ColorUtils.ts  InlineCellMetadata.tsx  InlineMetadata.tsx
labextension/src/components/deploys-progress/: DeployProgress.tsx  DeploysProgress.tsx
labextension/src/icons/: BrowseInRokBlue.tsx  statusRunning.tsx  statusTerminated.tsx
labextension/src/lib/: CellMetadataContext.ts  CellUtils.ts  ColorUtils.ts  Commands.ts  NotebookUtils.tsx  RPCUtils.tsx  TagsUtils.ts  Theme.d.ts  Theme.js  Utils.ts  index.d.ts  index.js  widget.d.ts  widget.js
labextension/src/lib/components/: AdvancedSettings.d.ts  AdvancedSettings.js  AnnotationInput.d.ts  AnnotationInput.js  DeployButton.d.ts  DeployButton.js  ExperimentInput.d.ts  ExperimentInput.js  Input.d.ts  Input.js  LightTooltip.d.ts  LightTooltip.js  RokInput.d.ts  RokInput.js  Select.d.ts  Select.js  SelectMulti.d.ts  SelectMulti.js  VolumeAccessModeSelect.d.ts  VolumeAccessModeSelect.js
labextension/src/lib/icons/: BrowseInRokBlue.d.ts  BrowseInRokBlue.js  statusRunning.d.ts  statusRunning.js  statusTerminated.d.ts  statusTerminated.js
labextension/src/lib/lib/: CellMetadataContext.d.ts  CellMetadataContext.js  CellUtils.d.ts  (+13 more)
labextension/src/utils/: CellUtils.ts  NotebookUtils.ts  NotebookUtils.tsx  RPCUtils.tsx  TagsUtils.ts
labextension/src/widgets/: CellMetadataEditorDialog.tsx  KatibDialog.tsx  LeftPanel.tsx  LeftPanelWidget.tsx  VolumesPanel.tsx
labextension/style/: base.css  index.css
(+434 files in other folders)
